# mlops-ddos

./: .gitignore  .gitignore.txt  large_files.txt  nested_gits.txt
9_feast_demo/: feast_demo.ipynb  main.py  (+1 more)
building-data-pipelines/: data.csv  demo_pipeline-5.ipynb  pyproject.toml
building-data-pipelines/.ipynb_checkpoints/: demo_pipeline-5-checkpoint.ipynb  main-checkpoint.py
timeseries-forecasting-wandb/: demo-two.ipynb  main.py  pyproject.toml  train.csv
timeseries-forecasting-wandb/.ipynb_checkpoints/: demo-two-checkpoint.ipynb
timeseries-forecasting-wandb/artifacts/processed-sales-data-v0/: validation.csv
timeseries-forecasting-wandb/artifacts/sales-forecasting-lstm-v10/: best_model_bundle.pth
timeseries-forecasting-wandb/wandb/run-20260117_173523-csnupg29/: run-csnupg29.wandb
timeseries-forecasting-wandb/wandb/run-20260117_173744-nqca23jm/: run-nqca23jm.wandb
timeseries-forecasting-wandb/wandb/run-20260117_175347-fxjdwln9/: run-fxjdwln9.wandb
timeseries-forecasting-wandb/wandb/run-20260117_181637-wqudq8xc/: run-wqudq8xc.wandb
timeseries-forecasting-wandb/wandb/run-20260117_231450-8czb332y/: run-8czb332y.wandb
timeseries-forecasting-wandb/wandb/run-20260117_232357-b7v43vi6/: run-b7v43vi6.wandb
timeseries-forecasting-wandb/wandb/run-20260117_232429-0rq3h7gc/: run-0rq3h7gc.wandb
timeseries-forecasting-wandb/wandb/run-20260117_232821-83z82oj4/: run-83z82oj4.wandb
timeseries-forecasting-wandb/wandb/run-20260117_232855-6pyzlxhq/: run-6pyzlxhq.wandb
timeseries-forecasting-wandb/wandb/run-20260117_232925-a5l0ociw/: run-a5l0ociw.wandb
(+185 files in other folders)
