[project]
name = "building-data-pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python =


dependencies = [
   "ipykernel>=7.1.0",
   "jupyter>=1.1.1",
   "matplotlib==3.10.0",
   "notebook>=7.5.2",
   "numpy==2.0.2",
   "pandas==2.2.2",
   "pyarrow==18.1.0",
   "scikit-learn==1.6.1",
]
