[project]
name = "timeseries-forecasting-wandb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "wandb>=0.24.0",
]
